# metaclass-registry

./: .gitignore  .readthedocs.yml  PYPI_RELEASE_SETUP.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  coverage-pages.yml  publish.yml
docs/source/: api.rst  conf.py  examples.rst  index.rst  patterns.rst  quickstart.rst
src/metaclass_registry/: __init__.py  _home.py  cache.py  core.py  discovery.py  exceptions.py
tests/: __init__.py  conftest.py  test_cache.py  test_core.py  test_discovery.py  test_exceptions.py  test_home_helper.py
